Editor reskin: undo revision diff text wrong line spacing (BugId:6260)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@39201 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/EditPageLayout/css/core/conflict-diff.scss
+++ b/extensions/wikia/EditPageLayout/css/core/conflict-diff.scss
@@ -8,6 +8,7 @@
 	}
 
 	#diff {
+		@include bodytext;
 		background-color: #e6f0fb;
 		margin-right: -10px;
 		padding: 5px;
